# CrowPanel_TTS_clock-weather-quote_station

./: readme.md  sdkconfig.defaults
components/ui/: CMakeLists.txt  filelist.txt  ui.c  ui_Screen1.c  ui_Screen2.c  ui_Screen3.c  ui_Screen4.c  ui_events.c  ui_font_Font1.c  ui_font_Font2.c  ui_font_Font3.c  ui_font_Font4.c  ui_helpers.c
components/ui/include/: ui.h  ui_Screen1.h  ui_Screen2.h  ui_Screen3.h  ui_Screen4.h  ui_events.h  ui_helpers.h
main/: CMakeLists.txt  HxTTS.h  idf_component.yml  location_service.cpp  location_service.h  main.cpp  quote_service.cpp  quote_service.h  time_formatter.cpp  time_formatter.h  timezone_service.cpp  timezone_service.h  tts_bridge.cpp  uart.h  uart_json.c  uart_json.h  uart_rx_task.c  weather_service.cpp  weather_service.h
python/: app.py
